--- a/index.html
+++ b/index.html
@@ -4,6 +4,29 @@
   <head>
     <meta charset="UTF-8">
     <title>Portfólio</title>
+    <style>
+
+      h1 {
+        font-family:'Courier New', Courier;
+      }
+
+      body {
+        background-color: #94A0F0;
+      }
+      
+      #perfil {
+        font-family: monospace, sans-serif;
+      }
+
+      .hard-skill {
+        font-size: 18px;
+      }
+
+      .soft-skill {
+        font-size: 19px
+      }
+      
+    </style>
   </head>
 
   <body>
@@ -18,8 +41,8 @@
 
     <h2 id="perfil">Quem sou eu?</h2>
 
-    <p>
-      Olá, meu nome é <a href="#fotoyuri">Yuri Borges Mascarenhas</a>, brasileiro, resido na cidade de Teixeira de Freitas, no extremo sul da Bahia. Trabalho no Cartório de Registro de Imóveis, onde exerço o cargo de escrevente, sendo <em>coordenador</em> do setor de certidões. Sou formado em Direito, com pós graduação em Direito Notarial e Registral. No final de 2021 decidi seguir um antigo sonho de trabalhar com tecnologia. Para alcançar esse objetivo, entrei para a <strong>Trybe</strong>, escola de desenvolvimento web.
+    <p id="perfil">
+      Olá, meu nome é <a href="#fotoyuri">Yuri Borges Mascarenhas</a>, <em>brasileiro</em>, resido na cidade de <em>Teixeira de Freitas</em>, no extremo sul da Bahia. Trabalho no Cartório de Registro de Imóveis, onde exerço o cargo de escrevente, sendo <em>coordenador</em> do setor de certidões. Sou formado em Direito, com pós graduação em Direito Notarial e Registral. No final de 2021 decidi seguir um antigo sonho de trabalhar com tecnologia. Para alcançar esse objetivo, entrei para a <strong>Trybe</strong>, escola de desenvolvimento web.
     </p>
 
     <h2 id="habilidades">Quais são minhas habilidades?</h2>
@@ -29,15 +52,15 @@
     </p>
 
     <ul>
-      <li>Linux, com conhecimentos em Unix e Bash</li>
-      <li>Git, GitHub e Internet</li>
-      <li>HTML e CSS</li>
-      <li>Visual Studio Code</li>
-      <li>Trabalhar em equipe</li>
-      <li>Respeito aos colegas de trabalho</li>
-      <li>Responsabilidade</li>
-      <li>Gosto de resolver problemas</li>
-      <li><strong>Vontade de aprender</strong></li>
+      <li class="hard-skill">Linux, com conhecimentos em Unix e Bash</li>
+      <li class="hard-skill">Git, GitHub e Internet</li>
+      <li class="hard-skill">HTML e CSS</li>
+      <li class="hard-skill">Visual Studio Code</li>
+      <li class="soft-skill">Trabalhar em equipe</li>
+      <li class="soft-skill">Respeito aos colegas de trabalho</li>
+      <li class="soft-skill">Responsabilidade</li>
+      <li class="soft-skill">Gosto de resolver problemas</li>
+      <li class="soft-skill"><strong>Vontade de aprender</strong></li>
     </ul>
 
     <h2 id="recomendacoes">Páginas que recomendo</h2>
